HelloUltraviolet/Fixtures/RejectedSource/Procedures/OverloadResolutionBeforeCallTyping/Expected.uv
//! Expected diagnostic metadata for the OverloadResolutionBeforeCallTyping rejected-source specimen.

expectedDiagnostic("E-SEM-3031", "req.15.FreeProcedureOverloadResolutionBeforeCallTyping")
